프로젝트 초기 세팅

--- a/app.json
+++ b/app.json
@@ -11,20 +11,26 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     },
     "android": {
+      "googleServicesFile": "./google-services.json",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.rhfo0509.HealthMate"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "plugins": ["@react-native-firebase/app", "@react-native-firebase/auth"],
+    "extra": {
+      "eas": {
+        "projectId": "f3214264-1887-4850-b7bf-50978075019d"
+      }
     }
   }
 }
