--- a/package.json
+++ b/package.json
@@ -4,18 +4,49 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/react-native-action-sheet": "^4.0.1",
+    "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-firebase/app": "^19.1.2",
+    "@react-native-firebase/auth": "^19.1.2",
+    "@react-native-firebase/firestore": "^19.1.2",
+    "@react-native-firebase/storage": "^19.1.2",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/drawer": "^6.6.15",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "@reduxjs/toolkit": "^2.2.3",
+    "@types/react": "~18.2.45",
+    "eas-cli": "^7.6.2",
     "expo": "~50.0.14",
+    "expo-dev-client": "~3.3.11",
+    "expo-image-picker": "~14.7.1",
+    "expo-splash-screen": "^0.26.4",
     "expo-status-bar": "~1.11.1",
+    "firebase": "^10.10.0",
+    "global": "^4.4.0",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.73.6",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-get-random-values": "~1.8.0",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.30.1",
+    "react-native-vector-icons": "^10.0.3",
+    "react-redux": "^9.1.0",
+    "redux-persist": "^6.0.0",
+    "typescript": "^5.3.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/redux-persist": "^4.3.1",
+    "@types/uuid": "^9.0.8"
   },
   "private": true
 }
