--- a/package.json
+++ b/package.json
@@ -12,18 +12,22 @@
     "@expo/react-native-action-sheet": "^4.0.1",
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-community/datetimepicker": "7.6.1",
     "@react-native-firebase/app": "^19.1.2",
     "@react-native-firebase/auth": "^19.1.2",
     "@react-native-firebase/firestore": "^19.1.2",
     "@react-native-firebase/storage": "^19.1.2",
+    "@react-native-picker/picker": "2.6.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@reduxjs/toolkit": "^2.2.3",
     "@types/react": "~18.2.45",
+    "date-fns": "^3.6.0",
     "eas-cli": "^7.6.2",
     "expo": "~50.0.14",
+    "expo-calendar": "~12.2.1",
     "expo-dev-client": "~3.3.11",
     "expo-image-picker": "~14.7.1",
     "expo-splash-screen": "^0.26.4",
@@ -32,8 +36,13 @@
     "global": "^4.4.0",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-calendar-picker": "^8.0.2",
+    "react-native-calendar-strip": "^2.2.6",
+    "react-native-calendars": "^1.1304.1",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-get-random-values": "~1.8.0",
+    "react-native-picker-select": "^9.1.3",
+    "react-native-radio-buttons-group": "^3.1.0",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
