--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-native-picker/picker": "2.6.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/drawer": "^6.6.15",
+    "@react-navigation/material-top-tabs": "^6.6.13",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@reduxjs/toolkit": "^2.2.3",
@@ -41,12 +42,14 @@
     "react-native-calendars": "^1.1304.1",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-get-random-values": "~1.8.0",
+    "react-native-pager-view": "6.2.3",
     "react-native-picker-select": "^9.1.3",
     "react-native-radio-buttons-group": "^3.1.0",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
     "react-native-swipe-list": "^0.0.2",
+    "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.3",
     "react-redux": "^9.1.0",
     "redux-persist": "^6.0.0",
