--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
     "react-native-picker-select": "^9.1.3",
     "react-native-radio-buttons-group": "^3.1.0",
     "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "^4.9.0",
-    "react-native-screens": "^3.30.1",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-swipe-list": "^0.0.2",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.3",
