chore: 작업 환경 변경에 따른 패키지 설치/삭제/변경

--- a/app.json
+++ b/app.json
@@ -26,11 +26,6 @@
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "plugins": ["@react-native-firebase/app", "@react-native-firebase/auth"],
-    "extra": {
-      "eas": {
-        "projectId": "f3214264-1887-4850-b7bf-50978075019d"
-      }
-    }
+    "plugins": ["@react-native-firebase/app", "@react-native-firebase/auth"]
   }
 }
