--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "expo-image-picker": "~14.7.1",
     "expo-splash-screen": "0.26.4",
     "expo-status-bar": "~1.11.1",
-    "firebase": "^10.10.0",
+    "firebase": "10.11.1",
     "global": "^4.4.0",
     "react": "18.2.0",
     "react-native": "0.73.6",
