--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-native-swipe-list": "^0.0.2",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.3",
+    "react-native-week-view": "^0.30.0",
     "react-redux": "^9.1.0",
     "redux-persist": "^6.0.0",
     "typescript": "^5.3.0",
