--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "@types/react": "~18.2.45",
     "date-fns": "^3.6.0",
     "expo": "~50.0.14",
+    "expo-av": "~13.10.6",
     "expo-image-picker": "~14.7.1",
     "expo-splash-screen": "0.26.4",
     "expo-status-bar": "~1.11.1",
-    "expo-video": "^1.1.8",
     "firebase": "10.11.1",
     "global": "^4.4.0",
     "react": "18.2.0",
