--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-image-picker": "~14.7.1",
     "expo-splash-screen": "0.26.4",
     "expo-status-bar": "~1.11.1",
+    "expo-video": "^1.1.8",
     "firebase": "10.11.1",
     "global": "^4.4.0",
     "react": "18.2.0",
