--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo": "~50.0.14",
     "expo-av": "~13.10.6",
     "expo-image-picker": "~14.7.1",
+    "expo-linear-gradient": "~12.7.2",
     "expo-splash-screen": "0.26.4",
     "expo-status-bar": "~1.11.1",
     "expo-video": "^1.1.8",
@@ -39,11 +40,13 @@
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-get-random-values": "~1.8.0",
+    "react-native-gifted-charts": "^1.4.10",
     "react-native-pager-view": "6.2.3",
     "react-native-picker-select": "^9.1.3",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-svg": "14.1.0",
     "react-native-swipe-list": "^0.0.2",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.3",
