--- a/package.json
+++ b/package.json
@@ -11,49 +11,49 @@
   "dependencies": {
     "@expo/react-native-action-sheet": "^4.0.1",
     "@expo/vector-icons": "14.0.0",
-    "@react-native-async-storage/async-storage": "1.21.0",
-    "@react-native-community/datetimepicker": "7.6.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-firebase/app": "^19.2.2",
     "@react-native-firebase/auth": "^19.2.2",
     "@react-native-firebase/firestore": "^19.2.2",
     "@react-native-firebase/storage": "^19.2.2",
-    "@react-native-picker/picker": "2.6.1",
+    "@react-native-picker/picker": "2.7.5",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/material-top-tabs": "^6.6.13",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@types/react": "~18.2.45",
     "date-fns": "^3.6.0",
-    "expo": "~50.0.14",
-    "expo-av": "~13.10.6",
-    "expo-image-picker": "~14.7.1",
-    "expo-linear-gradient": "~12.7.2",
-    "expo-splash-screen": "0.26.4",
-    "expo-status-bar": "~1.11.1",
+    "expo": "51",
+    "expo-av": "~14.0.5",
+    "expo-image-picker": "~15.0.5",
+    "expo-linear-gradient": "~13.0.2",
+    "expo-splash-screen": "~0.27.5",
+    "expo-status-bar": "~1.12.1",
     "expo-video": "^1.1.8",
     "firebase": "10.11.1",
     "global": "^4.4.0",
     "react": "18.2.0",
-    "react-native": "0.73.6",
+    "react-native": "0.74.2",
     "react-native-calendar-strip": "2.2.6",
     "react-native-calendars": "1.1304.1",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "~2.14.0",
-    "react-native-get-random-values": "~1.8.0",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-get-random-values": "~1.11.0",
     "react-native-gifted-charts": "^1.4.10",
-    "react-native-pager-view": "6.2.3",
+    "react-native-pager-view": "6.3.0",
     "react-native-picker-select": "^9.1.3",
-    "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "react-native-svg": "14.1.0",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
     "react-native-swipe-list": "^0.0.2",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.3",
     "react-native-week-view": "^0.30.0",
     "react-redux": "^9.1.0",
     "redux-persist": "^6.0.0",
-    "typescript": "^5.3.0",
+    "typescript": "~5.3.3",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
