--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@expo/react-native-action-sheet": "^4.0.1",
-    "@expo/vector-icons": "14.0.0",
+    "@expo/vector-icons": "14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-firebase/app": "^19.2.2",
@@ -24,9 +24,9 @@
     "@react-navigation/native-stack": "^6.9.26",
     "@types/react": "~18.2.45",
     "date-fns": "^3.6.0",
-    "expo": "51",
-    "expo-av": "~14.0.5",
-    "expo-image-picker": "~15.0.5",
+    "expo": "~51.0.28",
+    "expo-av": "~14.0.6",
+    "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "~13.0.2",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
@@ -34,7 +34,7 @@
     "firebase": "10.11.1",
     "global": "^4.4.0",
     "react": "18.2.0",
-    "react-native": "0.74.2",
+    "react-native": "0.74.5",
     "react-native-calendar-strip": "2.2.6",
     "react-native-calendars": "1.1304.1",
     "react-native-elements": "^3.4.3",
@@ -44,7 +44,7 @@
     "react-native-pager-view": "6.3.0",
     "react-native-picker-select": "^9.1.3",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.1",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-swipe-list": "^0.0.2",
