--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@types/react": "~18.2.45",
+    "axios": "^1.7.7",
     "date-fns": "^3.6.0",
     "expo": "~51.0.28",
     "expo-av": "~14.0.6",
