--- a/front/package.json
+++ b/front/package.json
@@ -10,9 +10,9 @@
   },
   "dependencies": {
     "@expo/react-native-action-sheet": "^4.0.1",
-    "@expo/vector-icons": "14.0.2",
+    "@expo/vector-icons": "^14.0.3",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/datetimepicker": "8.2.0",
+    "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-firebase/app": "^19.2.2",
     "@react-native-firebase/auth": "^19.2.2",
     "@react-native-firebase/firestore": "^19.2.2",
@@ -25,12 +25,15 @@
     "@types/react": "~18.2.45",
     "axios": "^1.7.7",
     "date-fns": "^3.6.0",
-    "expo": "~51.0.28",
-    "expo-av": "~14.0.6",
+    "eas-cli": "^12.5.1",
+    "expo": "~51.0.36",
+    "expo-av": "~14.0.7",
+    "expo-dev-client": "~4.0.27",
     "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "~13.0.2",
-    "expo-splash-screen": "~0.27.5",
+    "expo-splash-screen": "~0.27.6",
     "expo-status-bar": "~1.12.1",
+    "expo-updates": "~0.25.26",
     "expo-video": "^1.1.8",
     "firebase": "10.11.1",
     "global": "^4.4.0",
@@ -38,6 +41,7 @@
     "react-native": "0.74.5",
     "react-native-calendar-strip": "2.2.6",
     "react-native-calendars": "1.1304.1",
+    "react-native-compressor": "^1.9.0",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-get-random-values": "~1.11.0",
