--- a/front/package.json
+++ b/front/package.json
@@ -28,13 +28,14 @@
     "eas-cli": "^12.5.1",
     "expo": "~51.0.36",
     "expo-av": "~14.0.7",
+    "expo-background-fetch": "~12.0.1",
     "expo-dev-client": "~4.0.27",
     "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "~13.0.2",
     "expo-splash-screen": "~0.27.6",
     "expo-status-bar": "~1.12.1",
+    "expo-task-manager": "~11.8.2",
     "expo-updates": "~0.25.26",
-    "expo-video": "^1.1.8",
     "firebase": "10.11.1",
     "global": "^4.4.0",
     "react": "18.2.0",
