--- a/front/package.json
+++ b/front/package.json
@@ -45,6 +45,7 @@
     "react-native-gesture-handler": "~2.16.1",
     "react-native-get-random-values": "~1.11.0",
     "react-native-gifted-charts": "^1.4.10",
+    "react-native-global-props": "^1.1.5",
     "react-native-pager-view": "6.3.0",
     "react-native-picker-select": "^9.1.3",
     "react-native-reanimated": "~3.10.1",
